--- a/style/style.css
+++ b/style/style.css
@@ -27,8 +27,10 @@
     
     h1 {
         margin: 0;
+        margin-bottom: 20px;
         padding: 0;
-        font-size: 1.2em;
+        font-size: 36px;
+        font-weight: bold;
     }
     /***************************************************************************************************
    =========================================================================================== 
